# SkinCare-Backend

./: .gitignore  README.md  package-lock.json
backend/: app.py  pyproject.toml  requirements.txt
backend/config/: cloudinary_config.py  database.py  firebase_config.py
backend/controllers/: auth_controller.py
backend/ml_model/: classifier.py
backend/models/: session_model.py  user_model.py
backend/routes/: auth_routes.py  session_routes.py
backend/utils/: api_response.py  encryption.py
