[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.4"
dependencies = [
    "absl-py==2.2.2",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "astunparse==1.6.3",
    "attrs==25.3.0",
    "auth0-python==4.9.0",
    "authlib==1.5.2",
    "bcrypt==4.3.0",
    "blinker==1.9.0",
    "cachecontrol==0.14.2",
    "cachelib==0.13.0",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "cloudinary==1.43.0",
    "colorama==0.4.6",
    "cryptography==44.0.2",
    "dataclasses-json==0.6.7",
    "dnspython==2.7.0",
    "ecdsa==0.19.1",
    "faiss-cpu==1.10.0",
    "filelock==3.18.0",
    "firebase==4.0.1",
    "firebase-admin==6.6.0",
    "flask==3.1.0",
    "flask-cors==5.0.1",
    "flask-session==0.8.0",
    "flask-wtf==1.2.2",
    "flatbuffers==25.2.10",
    "frozenlist==1.6.0",
    "fsspec==2025.3.2",
    "gast==0.6.0",
    "google-api-core==2.24.1",
    "google-api-python-client==2.163.0",
    "google-auth==2.38.0",
    "google-auth-httplib2==0.2.0",
    "google-cloud-core==2.4.2",
    "google-cloud-firestore==2.20.1",
    "google-cloud-storage==3.1.0",
    "google-crc32c==1.6.0",
    "google-pasta==0.2.0",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.69.1",
    "greenlet==3.2.1",
    "grpcio==1.70.0",
    "grpcio-status==1.70.0",
    "h11==0.14.0",
    "h5py==3.13.0",
    "httpcore==1.0.8",
    "httplib2==0.22.0",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "huggingface-hub==0.30.2",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "joblib==1.4.2",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jwcrypto==1.5.6",
    "keras==3.9.2",
    "langchain==0.3.24",
    "langchain-community==0.3.22",
    "langchain-core==0.3.55",
    "langchain-text-splitters==0.3.8",
    "langsmith==0.3.33",
    "libclang==18.1.1",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "mdurl==0.1.2",
    "ml-dtypes==0.5.1",
    "mpmath==1.3.0",
    "msgpack==1.1.0",
    "msgspec==0.19.0",
    "multidict==6.4.3",
    "mypy-extensions==1.1.0",
    "namex==0.0.8",
    "networkx==3.4.2",
    "numpy==2.1.3",
    "opt-einsum==3.4.0",
    "optree==0.15.0",
    "orjson==3.10.16",
    "packaging==24.2",
    "pillow==11.1.0",
    "propcache==0.3.1",
    "proto-plus==1.26.0",
    "protobuf==5.29.3",
    "pyasn1==0.4.8",
    "pyasn1-modules==0.4.1",
    "pycparser==2.22",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pydantic-settings==2.9.1",
    "pygments==2.19.1",
    "pyjwt==2.10.1",
    "pymongo==4.11.2",
    "pyparsing==3.2.1",
    "pypdf==5.4.0",
    "pypdf2==3.0.1",
    "python-dotenv==1.0.1",
    "python-jose==3.4.0",
    "python-jwt==4.1.0",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rich==14.0.0",
    "rsa==4.9",
    "safetensors==0.5.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "sentence-transformers==4.1.0",
    "setuptools==78.1.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.40",
    "sympy==1.13.3",
    "tenacity==9.1.2",
    "tensorboard==2.19.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.19.0",
    "termcolor==3.0.1",
    "tf-keras==2.19.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.21.1",
    "torch==2.7.0",
    "tqdm==4.67.1",
    "transformers==4.51.3",
    "typing-extensions==4.13.1",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.0",
    "uritemplate==4.1.1",
    "urllib3==2.3.0",
    "werkzeug==3.1.3",
    "wheel==0.45.1",
    "wrapt==1.17.2",
    "wtforms==3.2.1",
    "yarl==1.20.0",
    "zstandard==0.23.0",
]
