[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.4"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.10.0",
    "firebase-admin>=6.8.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "langchain-community>=0.3.22",
    "numpy==2.1.3",
    "pillow>=11.2.1",
    "pymongo>=4.12.0",
    "sentence-transformers>=4.1.0",
    "tensorflow==2.19.0",
    "tf-keras>=2.19.0",
]
